--- a/src/app/manual-entry/manual-entry.component.html
+++ b/src/app/manual-entry/manual-entry.component.html
@@ -1,1 +1,18 @@
-<h1>Manual-entry page</h1>
+<div class="top-info">
+  <h2> Flight Information</h2>
+</div>
+<br>
+<div class="container">
+  <div>Flight number:</div>
+  <input type="text" placeholder="e.g. BA0085" class="form-control"/>
+  <br><br>
+  <p>OR</p>
+  <p>Flying from:</p>
+  <input type="text" placeholder="City you are flying from" class="form-control"/>
+  <p>Flight number:</p>
+  <input type="text" placeholder="City you are flying to" class="form-control"/>
+  <br><br>
+  <div class="our-button">
+    <button class="btn btn-default">Get My Carbon Offset</button>
+  </div>
+<div>
