Updated HTML and Css fo purchase confirmation

--- a/src/app/purchase-confirmation/purchase-confirmation.component.html
+++ b/src/app/purchase-confirmation/purchase-confirmation.component.html
@@ -1,3 +1,19 @@
-<p>
-  purchase-confirmation works!
-</p>
+<div class="top-info">
+  <h2> Purchase Confirmation</h2>
+</div>
+<br>
+<div class="container">
+  <div class ="Thanks"><h3><br>Congrats you just helped build a wind turbine farm!<br><br>
+    Wind turbines generate renewable energy.<br><br>
+    <h4>Learn more by clicking here.</h4><br><br></h3></div>
+
+
+
+  <p></p>
+  <p></p>
+
+  <br><br>
+  <div>
+    <button class="btn btn-default">Dashboard</button>
+  </div>
+<div>
