information page html/css, manual entry

--- a/src/app/manual-entry/manual-entry.component.html
+++ b/src/app/manual-entry/manual-entry.component.html
@@ -12,15 +12,15 @@
     <p>OR</p>
     <div class="form-group">
       <p>Flying from:</p>
-      <input type="text" placeholder="City you are flying from" class="form-control"/>
+      <input type="text" placeholder="e.g. Vancouver" class="form-control"/>
     </div>
     <br>
     <div class="form-group">
       <p>Flight number:</p>
-      <input type="text" placeholder="City you are flying to" class="form-control"/>
+      <input type="text" placeholder="e.g. Toronto" class="form-control"/>
     </div>
     <br><br>
-    <div class="our-button">
+    <div>
       <button class="btn btn-default">Get My Carbon Offset</button>
     </div>
   </form>
