--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -1,3 +1,46 @@
-<p>
-  information works!
-</p>
+<div class="top-info">
+  <h2> Flight Impact</h2>
+</div>
+<br>
+
+<div class="grid-container" id="info">
+  <div class="airport-code">YVR</div>
+  <div class="airport-code">-></div>
+  <div class="airport-code">YYZ</div>
+  <div>Vancouver</div>
+  <div></div>
+  <div>Toronto</div>
+
+</div>
+<br>
+<div class="text container">
+  Carbon footprint:
+</div>
+<div class="number container">
+  XXXX
+</div>
+
+<div class="text container">
+  Kilometers:
+</div>
+<div class="number container">
+  3,364 km
+</div>
+
+<br>
+<div class="text container">
+  Donation amount:
+</div>
+<div class="number container">
+  $20.00
+</div>
+
+<br>
+<div>
+  <button class="btn btn-default" onclick="location.href = '/purchase-confirmation';">GO GREEN</button>
+</div>
+<br>
+<div id="bottom-text" class="container">
+  Your donation will be sent to a <strong>Wind Turbine Farm</strong>.
+  If you would like to pick a different cause, please click here.
+</div>
