--- a/src/app/purchase-confirmation/purchase-confirmation.component.html
+++ b/src/app/purchase-confirmation/purchase-confirmation.component.html
@@ -3,17 +3,21 @@
 </div>
 <br>
 <div class="container">
-  <div class ="Thanks"><h3><br>Congrats you just helped build a wind turbine farm!<br><br>
+  <div class ="Thanks"><h3><br>Congrats you just helped build a wind farm!<br><br>
     Wind turbines generate renewable energy.<br><br>
     <h4>Learn more by clicking here.</h4><br><br></h3></div>
-
-
-
-  <p></p>
-  <p></p>
-
+    <div class ="Discounts"><br>Here are local discounts you qualify for:<br><br>
+      <ul class="list-group">
+        <li class="list-group-item active">Freshi</li>
+        <li class="list-group-item">Lush</li>
+        <li class="list-group-item">304</li>
+        <li class="list-group-item">Whole Foods</li>
+        <li class="list-group-item">Organica</li>
+      </ul>
+     </div>
   <br><br>
   <div>
     <button class="btn btn-default">Dashboard</button>
   </div>
 <div>
+
