--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -1,3 +1,18 @@
-<p>
-  information works!
-</p>
+<div class="top-info">
+  <h2> Purchase Confirmation</h2>
+</div>
+<br>
+<div class="container">
+  <div><h1>Thanks to you 4 trees were saved</h1></div>
+  <input type="text" placeholder="e.g. BA0085" class="form-control"/>
+  <br><br>
+  <p>OR</p>
+  <p>Flying from:</p>
+  <input type="text" placeholder="City you are flying from" class="form-control"/>
+  <p>Flight number:</p>
+  <input type="text" placeholder="City you are flying to" class="form-control"/>
+  <br><br>
+  <div class="our-button">
+    <button class="btn btn-default">Get My Carbon Offset</button>
+  </div>
+<div>
