--- a/src/app/purchase-confirmation/purchase-confirmation.component.html
+++ b/src/app/purchase-confirmation/purchase-confirmation.component.html
@@ -8,16 +8,15 @@
     <h4>Learn more by clicking here.</h4><br><br></h3></div>
     <div class ="Discounts"><br>Here are local discounts you qualify for:<br><br>
       <ul class="list-group">
-        <li class="list-group-item active">Freshi</li>
+        <li class="list-group-item">Freshi</li>
         <li class="list-group-item">Lush</li>
         <li class="list-group-item">304</li>
         <li class="list-group-item">Whole Foods</li>
         <li class="list-group-item">Organica</li>
       </ul>
      </div>
-  <br><br>
+  <br>
   <div>
-    <button class="btn btn-default">Dashboard</button>
+    <button class="btn btn-default" onclick="location.href = '/dashboard';">Dashboard</button>
   </div>
 <div>
-
